# snaproo

./: .gitignore  CNAME  cg-improvements.md  jest.config.js  package-lock.json  package.json  playwright.config.js
browser/chrome/: background.js  manifest.json
browser/chrome/content/: detector.js
browser/chrome/editor/: batch-tool.js  callout-tool.js  certificate-tool.js  collage-tool.js  colors-tool.js  compare-tool.js  convert-tool.js  edit-tool.js  editor.html  editor.js  generate-tool.js  gif-tool.js  gifenc.js  guides.js  info-tool.js  library-manager.js  meme-tool.js  mockup-tool.js  objects.js  pipeline.js  placeholder-tool.js  qr-tool.js  screenshot-tool.js  shared-editor.js  showcase-tool.js  social-tool.js  store-tool.js  svg-tool.js  tools.js  tools2.js  tour.js  tracer.js  watermark-tool.js  zipwriter.js
browser/chrome/help/: help.html  help.js
browser/chrome/icons/: generate-icons.html
browser/chrome/popup/: popup.html  popup.js  qr.js
browser/chrome/settings/: settings.html  settings.js
browser/chrome/shared/: dialog.js  library.js  theme.js
browser/chrome/sidepanel/: sidepanel.html  sidepanel.js  sp-library.js  sp-overlay.js  sp-page.js  sp-shared.js
browser/chrome/styles/: editor-common.css  shared.css
browser/edge/: manifest.json
browser/firefox/: background-firefox.js  manifest.json
crates/: Cargo.toml
crates/src/: convert.rs  info.rs  qr.rs  svg.rs
scripts/: build-pwa.cjs
tests/e2e/: convert.spec.js  edit-operations.spec.js  editor.spec.js  helpers.js  navigation.spec.js  screenshots.spec.js  tools.spec.js
tests/extension/: detector.test.js  manifest.test.js
tests/pwa/: pwa.test.js
tests/unit/: batch-filename.test.js  convert-tool.test.js  format-size.test.js  gif-encoder.test.js  restricted-url.test.js
tests/utils/: color-utils.test.js  image-utils.test.js
website/docs/: changelog.html  contact.html  features.html  index.html  privacy.html
website/pwa/: app.js  index.html  manifest.json  sw.js
website/pwa/overrides/: mobile.js  responsive.css
